[gd_scene load_steps=6 format=3 uid="uid://cmkxap6ub7n0b"]

[ext_resource type="Script" path="res://playmode.gd" id="1_7fb0t"]
[ext_resource type="FontFile" uid="uid://dnsm1qw6jdtcp" path="res://Assets/Font/Montserrat-Bold.ttf" id="1_73o2f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nkb7w"]
bg_color = Color(0, 0.585726, 0.109276, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqo6l"]
bg_color = Color(0, 0.568096, 0.424495, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8svgv"]
bg_color = Color(0, 0.568627, 0.423529, 1)

[node name="Playmode" type="CanvasLayer"]
script = ExtResource("1_7fb0t")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0431373, 0.0431373, 0.0431373, 0.831373)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -220.0
offset_right = 384.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_73o2f")
theme_override_font_sizes/font_size = 40
text = "PLAY MODE"
horizontal_alignment = 1

[node name="Easy" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.988957, 0.988957, 0.988957, 1)
theme_override_fonts/font = ExtResource("1_73o2f")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_nkb7w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tqo6l")
theme_override_styles/normal = SubResource("StyleBoxFlat_8svgv")
text = "EASY - LEVEL 1"

[node name="Medium" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_73o2f")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_nkb7w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tqo6l")
theme_override_styles/normal = SubResource("StyleBoxFlat_8svgv")
text = "MEDIUM - LEVEL 2"

[node name="Hard" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_73o2f")
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_nkb7w")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tqo6l")
theme_override_styles/normal = SubResource("StyleBoxFlat_8svgv")
text = "HARD - LEVEL 3"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Hard" to="." method="_on_hard_pressed"]
